--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Welcome to By Grace Design " />
+    <meta name="description" content="Welcome to My Weather App Project " />
     <!--WhoCreated-->
     <meta name="author" content="SergioJCerritos => UnbelizeableWebDesign" />
     <!--FavIcon-->
